# rps-haskell

./: .gitignore  Procfile  README.md  app.json  rps.cabal  stack.yaml
app/: Main.hs
src/: Domain.hs  Example.hs  Http.hs  InMemoryRepository.hs
static/: custom.css  index.html
test/: DomainSpec.hs  ExampleSpec.hs  HttpSpec.hs  InMemoryRepositorySpec.hs
