name:                rps
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rps#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Http, Domain, InMemoryRepository
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , wai
                     , wai-extra
                     , wai-middleware-static
                     , guid
                     -- Set support
                     , containers
                     , hashable
  default-language:    Haskell2010

executable rps-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rps
  default-language:    Haskell2010

test-suite rps-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rps
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     -- Set support
                     , containers
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:      HttpSpec, DomainSpec, InMemoryRepositorySpec

source-repository head
  type:     git
  location: https://github.com/githubuser/rps
